unpackaged/main/default/objects/Promotions__c/Promotions__c.object-meta.xml
<CustomObject>
    <description>Used for defying selling promotions</description>
    <label>Promotion</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>