unpackaged/main/default/objects/Promotions__c/fields/Active_Promo__c.field-meta.xml
<CustomField>
    <fullName>Active_Promo__c</fullName>
    <formula>IF (Text(Status__c) = &quot;Active&quot;, TRUE,    
   IF  (Text(Status__c) = &quot;Date Driven&quot;, 
      IF (AND ( Start_Date_Time__c  &lt;= Now(), Now() &lt;=  End_Date_Time__c) , TRUE, FALSE), FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Promo</label>
    <type>Checkbox</type>
</CustomField>