unpackaged/main/default/objects/Promotions__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Used in Product Picker Flow</description>
    <formula>IF (ISPICKVAL(Discount_Value_Type__c,&quot;Fixed&quot;), &#39;$&#39; &amp; TEXT(Promotion_Discount__c), 
IF (ISPICKVAL(Discount_Value_Type__c,&quot;Percent&quot;),TEXT(Discount_Percentage__c*100)&amp;&#39;%&#39;, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <type>Text</type>
</CustomField>