unpackaged/main/default/objects/Promotions__c/fields/Discount_Duration_Lock__c.field-meta.xml
<CustomField>
    <fullName>Discount_Duration_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked will not permit billing period adjustment on Opportunity Promo</inlineHelpText>
    <label>Discount Duration Lock</label>
    <type>Checkbox</type>
</CustomField>