unpackaged/main/default/objects/Promotions__c/fields/Discount_Duration_Max__c.field-meta.xml
<CustomField>
    <fullName>Discount_Duration_Max__c</fullName>
    <inlineHelpText>Max billing periods promotion is allowed to be set by rep if allowed</inlineHelpText>
    <label>Discount Duration Max</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>