unpackaged/main/default/objects/Promotions__c/fields/Discount_Lock_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Lock_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount $ Lock</label>
    <type>Checkbox</type>
</CustomField>