unpackaged/main/default/objects/Promotions__c/fields/Discount_Lock__c.field-meta.xml
<CustomField>
    <fullName>Discount_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent users from overriding discount %.</description>
    <label>Discount % Lock</label>
    <type>Checkbox</type>
</CustomField>