unpackaged/main/default/objects/Promotions__c/fields/Discount_Max_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Max_2__c</fullName>
    <label>Discount $ Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>