unpackaged/main/default/objects/Promotions__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>