unpackaged/main/default/objects/Promotions__c/fields/Discount_Qty_Default__c.field-meta.xml
<CustomField>
    <fullName>Discount_Qty_Default__c</fullName>
    <label>Discount Qty Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>