unpackaged/main/default/objects/Promotions__c/fields/Discount_Qty_Lock__c.field-meta.xml
<CustomField>
    <fullName>Discount_Qty_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Qty Lock</label>
    <type>Checkbox</type>
</CustomField>