unpackaged/main/default/objects/Promotions__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short-Term</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>