unpackaged/main/default/objects/Promotions__c/fields/Partnership_Discount_Exclusively__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Discount_Exclusively__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this promotion is exclusive to Partnerships.</inlineHelpText>
    <label>Partnership Discount Exclusively</label>
    <type>Checkbox</type>
</CustomField>