unpackaged/main/default/objects/Promotions__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Product that the Promotion is active for.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MyCase Subscription</fullName>
            </value>
            <value>
                <fullName>MyCase Website</fullName>
            </value>
            <value>
                <fullName>MyCase Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>