unpackaged/main/default/objects/Promotions__c/fields/Product_SKU_Promotion_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Promotion_Count__c</fullName>
    <label>Product SKU Promotion Count</label>
    <summaryForeignKey>Product_SKU_Promotions__c.Promotion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>