unpackaged/main/default/objects/Promotions__c/fields/Promo_Description__c.field-meta.xml
<CustomField>
    <fullName>Promo_Description__c</fullName>
    <label>Promo Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>