unpackaged/main/default/objects/Promotions__c/fields/Promo_Name__c.field-meta.xml
<CustomField>
    <fullName>Promo_Name__c</fullName>
    <label>Promo Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>