unpackaged/main/default/objects/Promotions__c/fields/Short_Term_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Discount_Type__c</fullName>
    <label>Short-Term Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Promotion</fullName>
            </value>
            <value>
                <fullName>Sales Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>