unpackaged/main/default/objects/Promotions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Discount_Type__c</columns>
    <columns>Short_Term_Discount_Type__c</columns>
    <columns>Active_Promo__c</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Discount_Max__c</columns>
    <columns>Discount_Duration__c</columns>
    <columns>Discount_Duration_Lock__c</columns>
    <columns>Discount_Duration_Max__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>