unpackaged/main/default/objects/Promotions__c/listViews/LawPay_Promotions.listView-meta.xml
<ListView>
    <fullName>LawPay_Promotions</fullName>
    <columns>NAME</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Discount_Duration__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Active_Promo__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>LawPay</value>
    </filters>
    <label>LawPay Promotions</label>
</ListView>