unpackaged/main/default/objects/Promotions__c/listViews/MyCase_Short_Term_Company_Promotions.listView-meta.xml
<ListView>
    <fullName>MyCase_Short_Term_Company_Promotions</fullName>
    <columns>NAME</columns>
    <columns>Discount_Type__c</columns>
    <columns>Short_Term_Discount_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Active_Promo__c</columns>
    <columns>Discount_Max__c</columns>
    <columns>Discount_Duration__c</columns>
    <columns>Billing_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Promo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MyCase</value>
    </filters>
    <filters>
        <field>Discount_Type__c</field>
        <operation>equals</operation>
        <value>Short-Term</value>
    </filters>
    <filters>
        <field>Short_Term_Discount_Type__c</field>
        <operation>equals</operation>
        <value>Company Promotion</value>
    </filters>
    <label>MyCase - Short-Term Company Promos</label>
</ListView>